chore: update version to 1.0.0-beta.8 and enhance RRV Integration with new optimizations